--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -17,7 +17,7 @@ body{
    
     width: 100%;
     height: 400px;
-    background-image: url("../../../public/images/odessa-ukraine-august-fragment-theatrical-production-historical-drama-corsican-fate-napoleon-bonaparte-st-helena-157213285.jpg");
+    background-image: url(".././images/odessa-ukraine-august-fragment-theatrical-production-historical-drama-corsican-fate-napoleon-bonaparte-st-helena-157213285.jpg");
     
 }
 .book{
