--- a/src/components/ViewForBookProgram/viewForBookProgram.css
+++ b/src/components/ViewForBookProgram/viewForBookProgram.css
@@ -1,9 +1,10 @@
 .paginationBttn{
-    width: 80%;
+    width: 100%;
     height: 40px;
     list-style: none;
     display: flex;
     justify-content: center;
+    margin-top: 30px;
 }
 
 .paginationBttn a {
